@@ -113,6 +113,7 @@ class NEPHTHYS_USERS {
 
          $this->tmpl->assign('user_idx', $idx);
          $this->tmpl->assign('user_name', $user->user_name);
+         $this->tmpl->assign('user_full_name', $user->user_full_name);
          $this->tmpl->assign('user_email', $user->user_email);
          $this->tmpl->assign('user_priv', $user->user_priv);
          $this->tmpl->assign('user_active', $user->user_active);
@@ -160,16 +161,17 @@ class NEPHTHYS_USERS {
 
          $sth = $this->db->db_prepare("
             INSERT INTO nephthys_users (
-               user_idx, user_name, user_pass,
+               user_idx, user_name, user_full_name, user_pass,
                user_email, user_priv, user_active
             ) VALUES (
-               NULL, ?, ?,
+               NULL, ?, ?, ?,
                ?, ?, ?
             )
          ");
 
          $this->db->db_execute($sth, array(
             $_POST['user_name'],
+            $_POST['user_full_name'],
             sha1($_POST['user_pass1']),
             $_POST['user_email'],
             $_POST['user_priv'],
@@ -183,6 +185,7 @@ class NEPHTHYS_USERS {
             UPDATE nephthys_users
             SET
                user_name=?,
+               user_full_name=?,
                user_email=?,
                user_priv=?,
                user_active=?
@@ -192,6 +195,7 @@ class NEPHTHYS_USERS {
 
          $this->db->db_execute($sth, array(
             $_POST['user_name'],
+            $_POST['user_full_name'],
             $_POST['user_email'],
             $_POST['user_priv'],
             $_POST['user_active'],
